--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "./node_modules/.bin/webpack-dev-server --inline --hot",
     "build": "./node_modules/.bin/webpack",
     "prod": "./node_modules/.bin/webpack -p",
+    "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +35,13 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.8.0",
+    "grunt-stylelint": "^0.7.0",
+    "postcss-clean": "^1.0.2",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-easy-import": "^2.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
