--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "webpack.config.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
+    "prebuild": "npm run lint",
     "build": "webpack",
+    "preprod": "npm run lint",
     "prod": "webpack -p",
     "server": "node server.js",
+    "lint": "eslint ./src/js; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,6 +38,11 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
